RESOLVED FIXED87682
DFG should not generate code for code that the CFA proves to be unreachable
https://bugs.webkit.org/show_bug.cgi?id=87682
Summary DFG should not generate code for code that the CFA proves to be unreachable
Filip Pizlo
Reported 2012-05-28 16:56:38 PDT
When the CFA proves code to be unreachable, we are stuck in a bit of a conundrum. The code must still be known to other parts of the compiler because of OSR exit liveness issues, so it cannot be simply jettisoned. But we shouldn't be spending time generating that code, and we shouldn't be allowing OSR entry into that code.
Attachments
the patch (4.39 KB, patch)
2012-05-28 17:01 PDT, Filip Pizlo
no flags
the patch (6.92 KB, patch)
2012-05-28 19:09 PDT, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2012-05-28 17:01:02 PDT
Created attachment 144410 [details] the patch
Filip Pizlo
Comment 2 2012-05-28 19:09:56 PDT
Created attachment 144425 [details] the patch Cleaned up constant folding a bit more.
Filip Pizlo
Comment 3 2012-05-28 19:43:56 PDT
Note You need to log in before you can comment on or make changes to this bug.